codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_only_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• 工 作 中  (0s • 按  esc 中 断 )                     
                                                
                                                
› Ask Codex to do anything                      
                                                
  ? 查 看 快 捷 键                  剩 余 上 下 文  100%
